# ROS2-GSoD-OSRF-Task-2021

./: README.md  gsod_test_cpp  gsod_test_py
custom_msg_interface/: CMakeLists.txt  package.xml
custom_msg_interface/msg/: Request.msg
gsod_test_cpp/: CMakeLists.txt  package.xml
gsod_test_cpp/src/: customer.cpp  customer_msg.cpp  multiplier_msg.cpp  print_test.cpp
gsod_test_py/: README.md  package.xml  setup.cfg  setup.py
gsod_test_py/gsod_test_py/: customer.py  customer_msg.py  customerv2.py  customerv2_msg.py  multiplier.py  multiplier_msg.py  print_test.py
